@@ -1,0 +1,267 @@
+require File.join(File.dirname(__FILE__), '../lib/sequel')
+
+context "A new Database" do
+  setup do
+    @db = Sequel::Database.new(1 => 2, :logger => 3)
+  end
+  
+  specify "should receive options" do
+    @db.opts.should == {1 => 2, :logger => 3}  
+  end
+  
+  specify "should set the logger from opts[:logger]" do
+    @db.logger.should == 3
+  end
+  
+  specify "should create a connection pool" do
+    @db.pool.should_be_a_kind_of Sequel::ConnectionPool
+    @db.pool.max_size.should == 4
+    
+    Sequel::Database.new(:max_connections => 10).pool.max_size.should == 10
+  end
+  
+  specify "should pass the supplied block to the connection pool" do
+    cc = nil
+    d = Sequel::Database.new {1234}
+    d.synchronize {|c| cc = c}
+    cc.should == 1234
+  end
+end
+
+context "Database dataset methods" do
+  setup do
+    @db = Sequel::Database.new
+    @ds = @db.dataset
+  end
+  
+  specify "should provide a blank dataset through #dataset" do
+    @ds.should_be_a_kind_of Sequel::Dataset
+    @ds.opts.should == {}
+    @ds.db.should_be @db
+  end
+  
+  specify "should provide a #from dataset" do
+    d = @db.from(:mau)
+    d.should_be_a_kind_of Sequel::Dataset
+    d.sql.should == 'SELECT * FROM mau'
+    
+    e = @db[:miu]
+    e.should_be_a_kind_of Sequel::Dataset
+    e.sql.should == 'SELECT * FROM miu'
+  end
+  
+  specify "should provide a #select dataset" do
+    d = @db.select(:a, :b, :c).from(:mau)
+    d.should_be_a_kind_of Sequel::Dataset
+    d.sql.should == 'SELECT a, b, c FROM mau'
+  end
+end
+
+context "Database#execute" do
+  specify "should raise NotImplementedError" do
+    proc {Sequel::Database.new.execute('blah blah')}.should_raise NotImplementedError
+    proc {Sequel::Database.new << 'blah blah'}.should_raise NotImplementedError
+  end
+end
+
+context "Database#synchronize" do
+  setup do
+    @db = Sequel::Database.new(:max_connections => 1)
+    @db.pool.connection_proc = proc {12345}
+  end
+  
+  specify "should wrap the supplied block in pool.hold" do
+    stop = false
+    c1, c2 = nil
+    t1 = Thread.new {@db.synchronize {|c| c1 = c; while !stop;sleep 0.1;end}}
+    while !c1;end
+    c1.should == 12345
+    t2 = Thread.new {@db.synchronize {|c| c2 = c}}
+    sleep 0.2
+    @db.pool.available_connections.should_be_empty
+    c2.should_be_nil
+    stop = true
+    t1.join
+    sleep 0.1
+    c2.should == 12345
+    t2.join
+  end
+end
+
+context "Database#test_connection" do
+  setup do
+    @db = Sequel::Database.new
+    @test = nil
+    @db.pool.connection_proc = proc {@test = rand(100)}
+  end
+  
+  specify "should call pool#hold" do
+    @db.test_connection
+    @test.should_not_be_nil
+  end
+  
+  specify "should return true if successful" do
+    @db.test_connection.should_be true
+  end
+end
+
+class DummyDataset < Sequel::Dataset
+  def first
+    raise if @opts[:from] == [:a]
+    true
+  end
+end
+
+class DummyDatabase < Sequel::Database
+  attr_reader :sql
+  def execute(sql); @sql = sql; end
+
+  def dataset
+    DummyDataset.new(self)
+  end
+end
+
+context "Database#create_table" do
+  setup do
+    @db = DummyDatabase.new
+  end
+  
+  specify "should construct proper SQL" do
+    @db.create_table :test do
+      primary_key :id, :integer, :null => false
+      column :name, :text
+      index :name, :unique => true
+    end
+    @db.sql.should == 
+      'CREATE TABLE test (id integer NOT NULL PRIMARY KEY, name text);CREATE UNIQUE INDEX test_name_index ON test (name);'
+  end
+end
+
+class Dummy2Database < Sequel::Database
+  attr_reader :sql
+  def execute(sql); @sql = sql; end
+  def transaction; yield; end
+end
+
+context "Database#drop_table" do
+  setup do
+    @db = Dummy2Database.new
+  end
+  
+  specify "should construct proper SQL" do
+    @db.drop_table :test
+    @db.sql.should == 
+      'DROP TABLE test CASCADE;'
+  end
+  
+  specify "should accept multiple table names" do
+    @db.drop_table :a, :bb, :ccc
+    @db.sql.should ==
+      'DROP TABLE a CASCADE;DROP TABLE bb CASCADE;DROP TABLE ccc CASCADE;'
+  end
+end
+
+context "Database#table_exists?" do
+  setup do
+    @db = DummyDatabase.new
+    @db.stub!(:tables).and_return([:a, :b])
+    @db2 = DummyDatabase.new
+    Sequel::Dataset.stub!(:first).and_return(nil)
+  end
+  
+  specify "should use Database#tables if available" do
+    @db.table_exists?(:a).should_be true
+    @db.table_exists?(:b).should_be true
+    @db.table_exists?(:c).should_be false
+  end
+  
+  specify "should otherise try to select the first record from the table's dataset" do
+    @db2.table_exists?(:a).should_be false
+    @db2.table_exists?(:b).should_be true
+  end
+end
+
+
+class Dummy3Database < Sequel::Database
+  attr_reader :sql, :transactions
+  def execute(sql); @sql ||= []; @sql << sql; end
+
+  def dataset
+    DummyDataset.new(self)
+  end
+
+  class DummyConnection
+    def initialize(db); @db = db; end
+    def execute(sql); @db.execute(sql); end
+  end
+end
+
+context "Database#transaction" do
+  setup do
+    @db = Dummy3Database.new
+    @db.pool.connection_proc = proc {Dummy3Database::DummyConnection.new(@db)}
+  end
+  
+  specify "should wrap the supplied block with BEGIN + COMMIT statements" do
+    @db.transaction {@db.execute 'DROP TABLE test;'}
+    @db.sql.should == ['BEGIN', 'DROP TABLE test;', 'COMMIT']
+  end
+  
+  specify "should issue ROLLBACK if an exception is raised, and re-raise" do
+    @db.transaction {@db.execute 'DROP TABLE test;'; raise RuntimeError} rescue nil
+    @db.sql.should == ['BEGIN', 'DROP TABLE test;', 'ROLLBACK']
+    
+    proc {@db.transaction {raise RuntimeError}}.should_raise SequelConnectionError
+  end
+  
+  specify "should be re-entrant" do
+    stop = false
+    cc = nil
+    t = Thread.new do
+      @db.transaction {@db.transaction {@db.transaction {|c|
+        cc = c
+        while !stop; sleep 0.1; end
+      }}}
+    end
+    while cc.nil?; sleep 0.1; end
+    cc.should_be_a_kind_of Dummy3Database::DummyConnection
+    @db.transactions.should == [t]
+    stop = true
+    t.join
+    @db.transactions.should_be_empty
+  end
+end
+
+class Sequel::Database
+  def self.get_adapters; @@adapters; end
+end
+
+context "A database with a scheme" do
+  setup do
+    class CCC < Sequel::Database
+      set_adapter_scheme :ccc
+    end
+  end
+
+  specify "should be registered in adapters" do
+    Sequel::Database.get_adapters[:ccc].should == CCC
+  end
+  
+  specify "should be instantiated when its scheme is specified" do
+    c = Sequel::Database.connect('ccc://localhost/db')
+    c.should_be_a_kind_of CCC
+    c.opts[:host].should == 'localhost'
+    c.opts[:database].should == 'db'
+  end
+end
+
+context "Database#uri_to_options" do
+  specify "should convert a URI to an options hash" do
+    h = Sequel::Database.uri_to_options(URI.parse('ttt://uuu:ppp@192.168.60.1:1234/blah'))
+    h[:user].should == 'uuu'
+    h[:password].should == 'ppp'
+    h[:host].should == '192.168.60.1'
+    h[:port].should == 1234
+    h[:database].should == 'blah'
+  end
+end
